[package]
name = "sqlite-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.26.3", features = ["bundled"] }
rpds = "0.11.0"
anyhow = "1.0.51"
dashmap = "5.0.0"
lazy_static = "1.4.0"
string_cache = "0.8.2"